Front-end bug squashing / changes

--- a/views/css/stylesheet.css
+++ b/views/css/stylesheet.css
@@ -1,3 +1,11 @@
+html {
+  height: 100%;
+}
+
+body {
+  height: 100%;
+}
+
 img {
 	display: block;
 	height: 100px;
@@ -13,7 +21,7 @@ p {
 
 
 div {
-  margin: 10px auto;
+  margin: auto;
   text-align: center;
 }
 
@@ -22,8 +30,9 @@ h1, h2, h3 {
   text-align: center;  
 }
 
-h1 {
-  padding-bottom: 1%;
+h1, h2, h3 {
+  margin-bottom: 1%;
+  margin-top: 1%;
 }
 
 a {
@@ -48,7 +57,7 @@ div.button{}
 div.select_dog{}
 
 div.nav{
-  margin-top: 20px;
+  margin-top: 1%;
 }
 
 /* SCENT WHEEL */
@@ -64,6 +73,25 @@ div.nav{
 
 #direction {
   margin: 20px;
+}
+
+#new-sessions {
+  padding-top: 1%;
+  border-top: 1px solid #e4e4e4;
+  border-bottom: 1px solid #e4e4e4;
+  background-color: #f2f2f2;
+}
+
+#add-dog-form {
+  max-width: 700px;
+  margin: auto;
+  margin-top: 2%;
+}
+
+#new-training-form {
+  max-width: 800px;
+  margin: auto;
+  margin-top: 1.5%;
 }
 
 div.arm {
@@ -92,7 +120,7 @@ textarea {
 .form-control {
   text-align: center;
   margin: auto;
-  margin-bottom: 2%;
+  margin-bottom: 1.5%;
   width: 40%;
 }
 
@@ -100,19 +128,23 @@ textarea {
   margin-bottom: 1%;
 }
 
+.wrapper {
+  min-height: 100%;
+  height: auto;
+}
+
 .push {
+  position: relative;
   height: 40px;
+  margin: 0 auto;
 }
 
 .footer {
-  border-top: 1px solid #e4e4e4;
-  background-color: #f2f2f2;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: 0;
+  position: relative;
+  margin: 0 auto;
   height: 40px;
   line-height: 40px;
   vertical-align: middle;
+  border-top: 1px solid #e4e4e4;
+  background-color: #f2f2f2; 
 }
